<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/google_email"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/google_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:shadowColor="#fff"
            android:textColor="@color/colorText"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/google_username"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/google_password"
        app:layout_constraintEnd_toEndOf="@id/google_email"
        app:layout_constraintStart_toStartOf="@id/google_email"
        app:layout_constraintTop_toBottomOf="@id/google_email">

        <EditText
            android:id="@+id/txtViewUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/hint_user"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:textColorHint="#fff" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/google_password"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toEndOf="@id/google_username"
        app:layout_constraintStart_toStartOf="@id/google_username"
        app:layout_constraintTop_toBottomOf="@id/google_username"
        app:passwordToggleDrawable="@drawable/show_password_icon"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/textViewpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:textColorHint="#fff" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorSignup"
        android:text="@string/btn_signup"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/google_password"
        app:layout_constraintTop_toBottomOf="@+id/google_password" />


</androidx.constraintlayout.widget.ConstraintLayout>